fix display on small devices

--- a/src/app/page/selection/selection.component.scss
+++ b/src/app/page/selection/selection.component.scss
@@ -13,13 +13,16 @@
       flex: 1;
     }
     @media screen and (max-width: 500px) {
-      flex-direction: column;
+      display: grid;
+      align-items: start;
+      grid-template-columns: repeat(auto-fit, minmax(125px, 1fr));
     }
   }
 
   &.grid {
     display: grid;
     align-items: start;
+    grid-template-columns: repeat(auto-fit, minmax(125px, 1fr));
 
     @media screen and (min-width: 500px) {
       grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
@@ -31,6 +34,11 @@
   width: 150px;
   height: 150px;
   user-select: none;
+
+  @media screen and (max-width: 500px) {
+    width: 125px;
+    height: 125px;
+  }
 }
 
 .card {
@@ -50,10 +58,6 @@
 
   &:has(:checked) {
     background-color: #fff7df;
-  }
-
-  @media screen and (max-width: 500px) {
-    padding: 0.5rem 3rem;
   }
 }
 
@@ -81,7 +85,7 @@
 .score {
   position: fixed;
   top: 2rem;
-  right: calc(50vw - 34rem);
+  right: calc(50vw - 27.5rem);
 
   min-width: 3rem;
   height: 3rem;
@@ -96,7 +100,11 @@
 
   user-select: none;
   transition: background-color 1s;
-  box-shadow: 0 1px 0px 0 rgba(0, 0, 0, 0.25);
+  box-shadow: 0 1px 7px 1px rgba(0, 0, 0, 0.25);
 
   font-size: 1.5rem;
+
+  @media screen and (min-width: 1096px) {
+    right: calc(50vw - 34rem);
+  }
 }
